# QTKuGouApp

./: AppController.cpp  CMakeLists.txt  README.md
KuGouClient/: KuGouClient.cpp
KuGouClient/AiChat/: AiChat.cpp  ChatView.cpp
KuGouClient/AiChat/BubbleWidget/: ChatItemBase.cpp
KuGouClient/AllMusic/: AllMusic.cpp  all.css
KuGouClient/Channel/: Channel.cpp
KuGouClient/DailyRecommend/: DailyRecommend.cpp  daily.css
KuGouClient/ListenBook/: ListenBook.cpp
KuGouClient/ListenBook/ListenMyDownload/: ListenMyDownload.cpp
KuGouClient/ListenBook/ListenRecommend/: ListenRecommend.cpp
KuGouClient/Live/: Live.cpp
KuGouClient/Live/LiveBigLeftWidget/: LiveBigLeftWidget.cpp
KuGouClient/Live/LiveCommonPartWidget/: LiveCommonPartWidget.cpp
KuGouClient/Live/LiveMusicPartWidget/: LiveMusicPartWidget.cpp
KuGouClient/LocalDownload/: LocalDownload.cpp
KuGouClient/MusicCloudDisk/: MusicCloudDisk.cpp
KuGouClient/MusicRepository/: MusicRepoVideo.cpp  MusicRepository.cpp  musicrepo.css
KuGouClient/MyCollection/: MyCollection.cpp
KuGouClient/MyCollection/SingleSong/: single.css  (+1 more)
KuGouClient/PurchasedMusic/: PurchasedMusic.cpp
KuGouClient/RecentlyPlayed/: RecentlyPlayed.cpp
KuGouClient/RecommendForYou/: RecommendForYou.cpp
KuGouClient/Search/: Search.cpp
KuGouClient/SearchResultWidget/: SearchResultWidget.cpp
KuGouClient/SongList/: SongList.cpp
KuGouClient/Video/: Video.cpp
Res_Qrc/: BlockCover.qrc.discard  ListCover.qrc.discard  MVPoster.qrc.discard  MenuIcon.qrc.discard  MusicRepository.qrc.discard  RecommendForYou.qrc.discard  RectCover.qrc.discard  Res.qrc.discard  Search.qrc.discard  StandCover.qrc.discard
(+49 files in other folders)
